# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("./scripts/build/ninja/vars.gni")

all_devtools_files = [
  "front_end/shell.js",
  "front_end/devtools_app.js",
  "front_end/inspector.js",
  "front_end/js_app.js",
  "front_end/ndb_app.js",
  "front_end/node_app.js",
  "front_end/worker_app.js",
  "front_end/legacy_test_runner/accessibility_test_runner/accessibility_test_runner.js",
  "front_end/panels/accessibility/accessibilityNode.css",
  "front_end/panels/accessibility/accessibilityProperties.css",
  "front_end/panels/accessibility/axBreadcrumbs.css",
  "front_end/panels/accessibility/module.json",
  "front_end/panels/animation/animationScreenshotPopover.css",
  "front_end/panels/animation/animationTimeline.css",
  "front_end/panels/animation/module.json",
  "front_end/legacy_test_runner/application_test_runner/application_test_runner.js",
  "front_end/legacy_test_runner/bindings_test_runner/bindings_test_runner.js",
  "front_end/legacy_test_runner/application_test_runner/AppcacheTestRunner.js",
  "front_end/legacy_test_runner/application_test_runner/CacheStorageTestRunner.js",
  "front_end/legacy_test_runner/application_test_runner/IndexedDBTestRunner.js",
  "front_end/legacy_test_runner/application_test_runner/ResourcesTestRunner.js",
  "front_end/legacy_test_runner/application_test_runner/ResourceTreeTestRunner.js",
  "front_end/legacy_test_runner/application_test_runner/ServiceWorkersTestRunner.js",
  "front_end/legacy_test_runner/application_test_runner/StorageTestRunner.js",
  "front_end/legacy_test_runner/lighthouse_test_runner/lighthouse_test_runner.js",
  "front_end/lighthouse_worker/LighthouseService.js",
  "front_end/panels/lighthouse/lighthouseDialog.css",
  "front_end/panels/lighthouse/lighthousePanel.css",
  "front_end/panels/lighthouse/lighthouseStartView.css",
  "front_end/panels/lighthouse/module.json",
  "front_end/legacy_test_runner/axe_core_test_runner/axe_core_test_runner.js",
  "front_end/third_party/axe-core/axe.js",
  "front_end/legacy_test_runner/bindings_test_runner/AutomappingTestRunner.js",
  "front_end/legacy_test_runner/bindings_test_runner/BindingsTestRunner.js",
  "front_end/legacy_test_runner/bindings_test_runner/IsolatedFilesystemTestRunner.js",
  "front_end/legacy_test_runner/bindings_test_runner/OverridesTestRunner.js",
  "front_end/legacy_test_runner/bindings_test_runner/PersistenceTestRunner.js",
  "front_end/panels/browser_debugger/domBreakpointsSidebarPane.css",
  "front_end/panels/browser_debugger/categorizedBreakpointsSidebarPane.css",
  "front_end/panels/browser_debugger/module.json",
  "front_end/panels/browser_debugger/xhrBreakpointsSidebarPane.css",
  "front_end/browser_sdk/module.json",
  "front_end/panels/changes/changesSidebar.css",
  "front_end/panels/changes/changesView.css",
  "front_end/panels/changes/module.json",
  "front_end/cm/codemirror.css",
  "front_end/cm/module.json",
  "front_end/color_picker/module.json",
  "front_end/color_picker/spectrum.css",
  "front_end/components/imagePreview.css",
  "front_end/components/jsUtils.css",
  "front_end/components/module.json",
  "front_end/panels/console_counters/module.json",
  "front_end/legacy_test_runner/console_test_runner/console_test_runner.js",
  "front_end/panels/console/consoleContextSelector.css",
  "front_end/panels/console/consolePinPane.css",
  "front_end/panels/console/consolePrompt.css",
  "front_end/panels/console/consoleSidebar.css",
  "front_end/panels/console/consoleView.css",
  "front_end/panels/console/module.json",
  "front_end/cookie_table/cookiesTable.css",
  "front_end/cookie_table/module.json",
  "front_end/legacy_test_runner/coverage_test_runner/coverage_test_runner.js",
  "front_end/panels/coverage/coverageListView.css",
  "front_end/panels/coverage/coverageView.css",
  "front_end/panels/coverage/module.json",
  "front_end/legacy_test_runner/cpu_profiler_test_runner/cpu_profiler_test_runner.js",
  "front_end/panels/css_overview/cssOverview.css",
  "front_end/panels/css_overview/cssOverviewCompletedView.css",
  "front_end/panels/css_overview/cssOverviewProcessingView.css",
  "front_end/panels/css_overview/cssOverviewSidebarPanel.css",
  "front_end/panels/css_overview/cssOverviewStartView.css",
  "front_end/panels/css_overview/module.json",
  "front_end/legacy_test_runner/data_grid_test_runner/data_grid_test_runner.js",
  "front_end/data_grid/dataGrid.css",
  "front_end/data_grid/module.json",
  "front_end/legacy_test_runner/device_mode_test_runner/device_mode_test_runner.js",
  "front_end/legacy_test_runner/elements_test_runner/elements_test_runner.js",
  "front_end/legacy_test_runner/elements_test_runner/EditDOMTestRunner.js",
  "front_end/legacy_test_runner/elements_test_runner/ElementsPanelShadowSelectionOnRefreshTestRunner.js",
  "front_end/legacy_test_runner/elements_test_runner/ElementsTestRunner.js",
  "front_end/legacy_test_runner/elements_test_runner/SetOuterHTMLTestRunner.js",
  "front_end/legacy_test_runner/elements_test_runner/StylesUpdateLinksTestRunner.js",
  "front_end/panels/elements/classesPaneWidget.css",
  "front_end/panels/elements/computedStyleSidebarPane.css",
  "front_end/panels/elements/computedStyleWidgetTree.css",
  "front_end/panels/elements/domLinkifier.css",
  "front_end/panels/elements/elementsPanel.css",
  "front_end/panels/elements/elementStatePaneWidget.css",
  "front_end/panels/elements/elementsTreeOutline.css",
  "front_end/panels/elements/layoutPane.css",
  "front_end/panels/elements/metricsSidebarPane.css",
  "front_end/panels/elements/module.json",
  "front_end/panels/elements/nodeStackTraceWidget.css",
  "front_end/panels/elements/platformFontsWidget.css",
  "front_end/panels/elements/propertiesWidget.css",
  "front_end/panels/elements/stylesSectionTree.css",
  "front_end/panels/elements/stylesSidebarPane.css",
  "front_end/emulated_devices/module.json",
  "front_end/panels/emulation/deviceModeToolbar.css",
  "front_end/panels/emulation/deviceModeView.css",
  "front_end/panels/emulation/devicesSettingsTab.css",
  "front_end/panels/emulation/inspectedPagePlaceholder.css",
  "front_end/panels/emulation/locationsSettingsTab.css",
  "front_end/panels/emulation/mediaQueryInspector.css",
  "front_end/panels/emulation/module.json",
  "front_end/panels/emulation/sensors.css",
  "front_end/panels/event_listeners/eventListenersView.css",
  "front_end/panels/event_listeners/module.json",
  "front_end/legacy_test_runner/extensions_test_runner/extensions_test_runner.js",
  "front_end/legacy_test_runner/extensions_test_runner/ExtensionsNetworkTestRunner.js",
  "front_end/legacy_test_runner/extensions_test_runner/ExtensionsTestRunner.js",
  "front_end/models/extensions/module.json",
  "front_end/legacy_test_runner/heap_profiler_test_runner/heap_profiler_test_runner.js",
  "front_end/panels/help/module.json",
  "front_end/panels/help/releaseNote.css",
  "front_end/inline_editor/bezierEditor.css",
  "front_end/inline_editor/bezierSwatch.css",
  "front_end/inline_editor/colorSwatch.css",
  "front_end/inline_editor/cssShadowEditor.css",
  "front_end/inline_editor/cssShadowSwatch.css",
  "front_end/inline_editor/fontEditor.css",
  "front_end/inline_editor/module.json",
  "front_end/inline_editor/swatchPopover.css",
  "front_end/panels/input/inputTimeline.css",
  "front_end/panels/input/module.json",
  "front_end/inspector_main/module.json",
  "front_end/inspector_main/nodeIcon.css",
  "front_end/inspector_main/renderingOptions.css",
  "front_end/inspector.js",
  "front_end/inspector.json",
  "front_end/js_main/module.json",
  "front_end/js_profiler/module.json",
  "front_end/panels/layer_viewer/layerDetailsView.css",
  "front_end/panels/layer_viewer/layers3DView.css",
  "front_end/panels/layer_viewer/module.json",
  "front_end/panels/layer_viewer/paintProfiler.css",
  "front_end/legacy_test_runner/layers_test_runner/layers_test_runner.js",
  "front_end/panels/layers/module.json",
  "front_end/main/module.json",
  "front_end/panels/media/eventDisplayTable.css",
  "front_end/panels/media/module.json",
  "front_end/panels/media/playerListView.css",
  "front_end/panels/media/playerPropertiesView.css",
  "front_end/panels/media/playerMessagesView.css",
  "front_end/panels/mobile_throttling/module.json",
  "front_end/panels/mobile_throttling/throttlingSettingsTab.css",
  "front_end/ndb_app.json",
  "front_end/legacy_test_runner/network_test_runner/network_test_runner.js",
  "front_end/panels/network/binaryResourceView.css",
  "front_end/panels/network/blockedURLsPane.css",
  "front_end/panels/network/eventSourceMessagesView.css",
  "front_end/panels/network/module.json",
  "front_end/panels/network/networkConfigView.css",
  "front_end/panels/network/networkLogView.css",
  "front_end/panels/network/networkManageCustomHeadersView.css",
  "front_end/panels/network/networkPanel.css",
  "front_end/panels/network/networkTimingTable.css",
  "front_end/panels/network/networkWaterfallColumn.css",
  "front_end/panels/network/requestCookiesView.css",
  "front_end/panels/network/requestHeadersTree.css",
  "front_end/panels/network/requestHeadersView.css",
  "front_end/panels/network/requestHTMLView.css",
  "front_end/panels/network/requestInitiatorView.css",
  "front_end/panels/network/requestInitiatorViewTree.css",
  "front_end/panels/network/signedExchangeInfoTree.css",
  "front_end/panels/network/signedExchangeInfoView.css",
  "front_end/panels/network/webSocketFrameView.css",
  "front_end/node_debugger/module.json",
  "front_end/node_main/module.json",
  "front_end/node_main/nodeConnectionsPanel.css",
  "front_end/object_ui/customPreviewComponent.css",
  "front_end/object_ui/module.json",
  "front_end/object_ui/objectPopover.css",
  "front_end/object_ui/objectPropertiesSection.css",
  "front_end/object_ui/objectValue.css",
  "front_end/perf_ui/chartViewport.css",
  "front_end/perf_ui/filmStripView.css",
  "front_end/perf_ui/flameChart.css",
  "front_end/perf_ui/module.json",
  "front_end/perf_ui/overviewGrid.css",
  "front_end/perf_ui/timelineGrid.css",
  "front_end/perf_ui/timelineOverviewInfo.css",
  "front_end/panels/performance_monitor/module.json",
  "front_end/panels/performance_monitor/performanceMonitor.css",
  "front_end/legacy_test_runner/performance_test_runner/performance_test_runner.js",
  "front_end/legacy_test_runner/performance_test_runner/TimelineDataTestRunner.js",
  "front_end/legacy_test_runner/performance_test_runner/TimelineTestRunner.js",
  "front_end/models/persistence/editFileSystemView.css",
  "front_end/models/persistence/module.json",
  "front_end/models/persistence/workspaceSettingsTab.css",
  "front_end/panels/profiler/heapProfiler.css",
  "front_end/panels/profiler/liveHeapProfile.css",
  "front_end/panels/profiler/module.json",
  "front_end/panels/profiler/profileLauncherView.css",
  "front_end/panels/profiler/profilesPanel.css",
  "front_end/panels/profiler/profilesSidebarTree.css",
  "front_end/issues/module.json",
  "front_end/issues/descriptions/CoepCoopSandboxedIframeCannotNavigateToCoopPage.md",
  "front_end/issues/descriptions/CoepCorpNotSameSite.md",
  "front_end/issues/descriptions/CoepCorpNotSameOrigin.md",
  "front_end/issues/descriptions/CoepCorpNotSameOriginAfterDefaultedToSameOriginByCoep.md",
  "front_end/issues/descriptions/CoepFrameResourceNeedsCoepHeader.md",
  "front_end/issues/descriptions/cspEvalViolation.md",
  "front_end/issues/descriptions/cspInlineViolation.md",
  "front_end/issues/descriptions/cspURLViolation.md",
  "front_end/issues/descriptions/LowTextContrast.md",
  "front_end/issues/descriptions/cspTrustedTypesSinkViolation.md",
  "front_end/issues/descriptions/cspTrustedTypesPolicyViolation.md",
  "front_end/issues/descriptions/heavyAd.md",
  "front_end/issues/descriptions/mixedContent.md",
  "front_end/issues/descriptions/sharedArrayBuffer.md",
  "front_end/issues/descriptions/corsInsecurePrivateNetwork.md",
  "front_end/issues/descriptions/SameSiteExcludeContextDowngradeRead.md",
  "front_end/issues/descriptions/SameSiteExcludeContextDowngradeSet.md",
  "front_end/issues/descriptions/SameSiteExcludeNavigationContextDowngrade.md",
  "front_end/issues/descriptions/SameSiteNoneInsecureErrorRead.md",
  "front_end/issues/descriptions/SameSiteNoneInsecureErrorSet.md",
  "front_end/issues/descriptions/SameSiteNoneInsecureWarnRead.md",
  "front_end/issues/descriptions/SameSiteNoneInsecureWarnSet.md",
  "front_end/issues/descriptions/SameSiteUnspecifiedLaxAllowUnsafeRead.md",
  "front_end/issues/descriptions/SameSiteUnspecifiedLaxAllowUnsafeSet.md",
  "front_end/issues/descriptions/SameSiteUnspecifiedTreatedAsLaxRead.md",
  "front_end/issues/descriptions/SameSiteUnspecifiedTreatedAsLaxSet.md",
  "front_end/issues/descriptions/SameSiteWarnCrossDowngradeRead.md",
  "front_end/issues/descriptions/SameSiteWarnCrossDowngradeSet.md",
  "front_end/issues/descriptions/SameSiteWarnStrictLaxDowngradeStrict.md",
  "front_end/issues/descriptions/TwaDigitalAssetLinksFailed.md",
  "front_end/issues/descriptions/TwaHttpError.md",
  "front_end/issues/descriptions/TwaPageUnavailableOffline.md",
  "front_end/issues/issuesPane.css",
  "front_end/issues/issuesTree.css",
  "front_end/issues/cspViolationsView.css",
  "front_end/issues/cspViolationsListView.css",
  "front_end/panels/developer_resources/module.json",
  "front_end/panels/developer_resources/developerResourcesView.css",
  "front_end/panels/developer_resources/developerResourcesListView.css",
  "front_end/panels/protocol_monitor/module.json",
  "front_end/quick_open/filteredListWidget.css",
  "front_end/quick_open/module.json",
  "front_end/panels/application/appManifestView.css",
  "front_end/panels/application/backgroundServiceView.css",
  "front_end/panels/application/storageView.css",
  "front_end/panels/application/cookieItemsView.css",
  "front_end/panels/application/frameDetailsReportView.css",
  "front_end/panels/application/indexedDBViews.css",
  "front_end/panels/application/module.json",
  "front_end/panels/application/resourcesPanel.css",
  "front_end/panels/application/resourcesSidebar.css",
  "front_end/panels/application/serviceWorkerCacheViews.css",
  "front_end/panels/application/serviceWorkersView.css",
  "front_end/panels/application/serviceWorkerUpdateCycleView.css",
  "front_end/screencast/module.json",
  "front_end/screencast/screencastView.css",
  "front_end/legacy_test_runner/sdk_test_runner/sdk_test_runner.js",
  "front_end/search/module.json",
  "front_end/search/searchResultsPane.css",
  "front_end/search/searchView.css",
  "front_end/legacy_test_runner/security_test_runner/security_test_runner.js",
  "front_end/security/lockIcon.css",
  "front_end/security/mainView.css",
  "front_end/security/module.json",
  "front_end/security/originView.css",
  "front_end/security/sidebar.css",
  "front_end/settings/frameworkIgnoreListSettingsTab.css",
  "front_end/settings/keybindsSettingsTab.css",
  "front_end/settings/module.json",
  "front_end/settings/settingsScreen.css",
  "front_end/shell.json",
  "front_end/snippets/module.json",
  "front_end/source_frame/fontView.css",
  "front_end/source_frame/imageView.css",
  "front_end/source_frame/jsonView.css",
  "front_end/source_frame/messagesPopover.css",
  "front_end/source_frame/module.json",
  "front_end/source_frame/resourceSourceFrame.css",
  "front_end/source_frame/xmlTree.css",
  "front_end/source_frame/xmlView.css",
  "front_end/legacy_test_runner/sources_test_runner/sources_test_runner.js",
  "front_end/legacy_test_runner/sources_test_runner/AutocompleteTestRunner.js",
  "front_end/legacy_test_runner/sources_test_runner/DebuggerTestRunner.js",
  "front_end/legacy_test_runner/sources_test_runner/EditorTestRunner.js",
  "front_end/legacy_test_runner/sources_test_runner/LiveEditTestRunner.js",
  "front_end/legacy_test_runner/sources_test_runner/SearchTestRunner.js",
  "front_end/legacy_test_runner/sources_test_runner/SourcesTestRunner.js",
  "front_end/sources/breakpointEditDialog.css",
  "front_end/sources/callStackSidebarPane.css",
  "front_end/sources/debuggerPausedMessage.css",
  "front_end/sources/dialog.css",
  "front_end/sources/javaScriptBreakpointsSidebarPane.css",
  "front_end/sources/module.json",
  "front_end/sources/navigatorTree.css",
  "front_end/sources/navigatorView.css",
  "front_end/sources/scopeChainSidebarPane.css",
  "front_end/sources/sourcesPanel.css",
  "front_end/sources/sourcesView.css",
  "front_end/sources/threadsSidebarPane.css",
  "front_end/sources/watchExpressionsSidebarPane.css",
  "front_end/text_editor/autocompleteTooltip.css",
  "front_end/text_editor/cmdevtools.css",
  "front_end/text_editor/cmdevtools.darkmode.css",
  "front_end/text_editor/module.json",
  "front_end/third_party/fabricjs/fabric.js",
  "front_end/third_party/fabricjs/module.json",
  "front_end/third_party/lighthouse/lighthouse-dt-bundle.js",
  "front_end/third_party/lighthouse/report-assets/report.css",
  "front_end/third_party/lighthouse/report-assets/report.js",
  "front_end/third_party/lighthouse/report-assets/report-generator.js",
  "front_end/third_party/lighthouse/report-assets/template.html",
  "front_end/third_party/lighthouse/report-assets/templates.html",
  "front_end/timeline/historyToolbarButton.css",
  "front_end/timeline/invalidationsTree.css",
  "front_end/timeline/module.json",
  "front_end/timeline/timelineFlamechartPopover.css",
  "front_end/timeline/timelineHistoryManager.css",
  "front_end/timeline/timelinePaintProfiler.css",
  "front_end/timeline/timelinePanel.css",
  "front_end/timeline/timelineStatusDialog.css",
  "front_end/ui/legacy/checkboxTextLabel.css",
  "front_end/ui/legacy/closeButton.css",
  "front_end/ui/legacy/confirmDialog.css",
  "front_end/ui/legacy/dialog.css",
  "front_end/ui/legacy/dropTarget.css",
  "front_end/ui/legacy/emptyWidget.css",
  "front_end/ui/legacy/filter.css",
  "front_end/ui/legacy/glassPane.css",
  "front_end/ui/legacy/infobar.css",
  "front_end/ui/legacy/inlineButton.css",
  "front_end/ui/legacy/inspectorCommon.css",
  "front_end/ui/legacy/inspectorScrollbars.css",
  "front_end/ui/legacy/themeColors.css",
  "front_end/ui/legacy/inspectorSyntaxHighlight.css",
  "front_end/ui/legacy/inspectorSyntaxHighlightDark.css",
  "front_end/ui/legacy/inspectorViewTabbedPane.css",
  "front_end/ui/legacy/listWidget.css",
  "front_end/ui/legacy/module.json",
  "front_end/ui/legacy/popover.css",
  "front_end/ui/legacy/progressIndicator.css",
  "front_end/ui/legacy/radioButton.css",
  "front_end/ui/legacy/remoteDebuggingTerminatedScreen.css",
  "front_end/ui/legacy/reportView.css",
  "front_end/ui/legacy/rootView.css",
  "front_end/ui/legacy/searchableView.css",
  "front_end/ui/legacy/slider.css",
  "front_end/ui/legacy/smallBubble.css",
  "front_end/ui/legacy/softContextMenu.css",
  "front_end/ui/legacy/softDropDown.css",
  "front_end/ui/legacy/softDropDownButton.css",
  "front_end/ui/legacy/splitWidget.css",
  "front_end/ui/legacy/suggestBox.css",
  "front_end/ui/legacy/tabbedPane.css",
  "front_end/ui/legacy/targetCrashedScreen.css",
  "front_end/ui/legacy/textButton.css",
  "front_end/ui/legacy/textPrompt.css",
  "front_end/ui/legacy/toolbar.css",
  "front_end/ui/legacy/tooltip.css",
  "front_end/ui/legacy/treeoutline.css",
  "front_end/ui/legacy/viewContainers.css",
  "front_end/web_audio/audioContextSelector.css",
  "front_end/web_audio/module.json",
  "front_end/web_audio/webAudio.css",
  "front_end/webauthn/module.json",
  "front_end/webauthn/webauthnPane.css",
  "front_end/recorder/module.json",
  "front_end/worker_main/module.json",
  "front_end/workspace_diff/module.json",
]

lighthouse_locale_files = [
  "locales/ar-XB.json",
  "locales/ar.json",
  "locales/bg.json",
  "locales/ca.json",
  "locales/cs.json",
  "locales/da.json",
  "locales/de.json",
  "locales/el.json",
  "locales/en-GB.json",
  "locales/en-US.json",
  "locales/en-XA.json",
  "locales/en-XL.json",
  "locales/es-419.json",
  "locales/es.json",
  "locales/fi.json",
  "locales/fil.json",
  "locales/fr.json",
  "locales/he.json",
  "locales/hi.json",
  "locales/hr.json",
  "locales/hu.json",
  "locales/id.json",
  "locales/it.json",
  "locales/ja.json",
  "locales/ko.json",
  "locales/lt.json",
  "locales/lv.json",
  "locales/nl.json",
  "locales/no.json",
  "locales/pl.json",
  "locales/pt-PT.json",
  "locales/pt.json",
  "locales/ro.json",
  "locales/ru.json",
  "locales/sk.json",
  "locales/sl.json",
  "locales/sr-Latn.json",
  "locales/sr.json",
  "locales/sv.json",
  "locales/ta.json",
  "locales/te.json",
  "locales/th.json",
  "locales/tr.json",
  "locales/uk.json",
  "locales/vi.json",
  "locales/zh-HK.json",
  "locales/zh-TW.json",
  "locales/zh.json",
]

devtools_locale_files = [ "en-US.json" ]
copied_devtools_locale_files = []

foreach(locale, devtools_locale_files) {
  copied_devtools_locale_files += [ "core/i18n/locales/$locale" ]
}
